--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,13 @@
 .navbar {
   grid-area: navbar;
   display: flex;
-  background-color: #1b2c38;
+  background-color: white;
   align-items: center;
   justify-content: space-between;
-  color: white;
-  padding: 1rem;
-  font-size: 24px;
+  color: black;
+  text-decoration: none;
+  padding: .3rem;
+  font-size: 20px;
 }
 
 .navbar ul {
@@ -31,11 +32,17 @@
   padding: 0;
 }
 
+.navbar ul button {
+  text-decoration: none;
+  color: black;
+}
+
 .navbar ul .navbar--li {
   margin-right: 1rem; 
   list-style: none;  
   background-color: white;
   color: black;
+  text-decoration: none;
   border-radius: 10em;
   font-size: 17px;
   font-weight: 600;
@@ -45,18 +52,75 @@
   border: 1px solid black;
   box-shadow: 0 0 0 0 black; 
 }
-.navbar ul li:hover {
-  transform: translateY(-4px) translateX(-2px);
-  box-shadow: 2px 5px 0 0 black;
-}
-
-.navbar ul li a {
-  text-decoration: none;
-  color: black;
+img {
+  display: block;
+  margin: 1rem;
+  max-width: 50%;
 }
 
 
-.ItemListContainer {
-  grid-area: itemlistcontainer;
-  padding: 2rem;
+.button {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  border: none;
+  background: none;
+  color: #0f1923;
+  cursor: pointer;
+  position: relative;
+  padding: 8px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 14px;
+  transition: all .15s ease;
 }
+
+.button::before,
+.button::after {
+  content: '';
+  display: block;
+  position: absolute;
+  right: 0;
+  left: 0;
+  height: calc(50% - 5px);
+  border: 1px solid #7D8082;
+  transition: all .15s ease;
+}
+
+.button::before {
+  top: 0;
+  border-bottom-width: 0;
+}
+
+.button::after {
+  bottom: 0;
+  border-top-width: 0;
+}
+
+.button:active,
+.button:focus {
+  outline: none;
+}
+
+.button:active::before,
+.button:active::after {
+  right: 3px;
+  left: 3px;
+}
+
+.button:active::before {
+  top: 3px;
+}
+
+.button:active::after {
+  bottom: 3px;
+}
+.card {
+  transition: 0.3s ease-in-out;
+}
+.card:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
